ignore gen files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 *.s??
 obj/
 lib/
+**/*.o
+**/*.so
+tests/test_table
+tests/google_message1.h
+tests/google_message2.h
+tests/google_messages.pb.cc
+tests/google_messages.pb.h
+tests/google_messages.proto.pb
+tests/test_cpp
+tests/test_def
+tests/test_handlers
+tests/bindings/googlepb/test_vs_proto2.googlemessage1
+tests/bindings/googlepb/test_vs_proto2.googlemessage2
+tests/json/test_json
+tests/pb/test_decoder
+tests/pb/test_encoder
+tests/pb/test_varint
